src/Notification/Notification.less
/* Popup.css */
.moon {
	.moon-notification {
		padding: 27px 39px 27px 39px;
		display: table;
	}
}

.moon-notification {
	font-family: @moon-notification-font-family;
	font-weight: @moon-notification-font-weight;
	font-style: @moon-notification-font-style;
	position: absolute;
	left: 50%;
	bottom: 0;
	max-width: 1083px;
	box-sizing: border-box;
	overflow: hidden;
	-webkit-transform: translate3d(-50%, 100%, 0);
	-moz-transform:    translate3d(-50%, 100%, 0);
	-ms-transform:     translate3d(-50%, 100%, 0);
	transform:         translate3d(-50%, 100%, 0);

	&.moon-neutral {
		background-color: transparent;

		&::before {
			content: '';
			display: block;
			background-color: rgba(222, 237, 237, 0.85);
			background-clip: padding-box;
			border: 6px solid rgba(0, 0, 0, 0.85);
			border-radius: 24px;
			position: absolute;
			top: 0;
			right: 0;
			bottom: 0;
			left: 0;
			z-index: -1;
		}
	}

	&.animate {
		-webkit-transition: -webkit-transform 0ms cubic-bezier(0,1.5,.75,1);
		-moz-transition:       -moz-transform 0ms cubic-bezier(0,1.5,.75,1);
		-ms-transition:         -ms-transform 0ms cubic-bezier(0,1.5,.75,1);
		transition:                 transform 0ms cubic-bezier(0,1.5,.75,1);

		&.hiding {
			-webkit-transition-timing-function: cubic-bezier(0.47, 0, 0.745, 0.715);
			-moz-transition-timing-function:    cubic-bezier(0.47, 0, 0.745, 0.715);
			-ms-transition-timing-function:     cubic-bezier(0.47, 0, 0.745, 0.715);
			transition-timing-function:         cubic-bezier(0.47, 0, 0.745, 0.715);
		}
	}

	&.showing,
	&.shown {
		// Vertically move the full height of the notification box, plus an additional 168px
		-webkit-transform: translate3d(-50%, 0, 0) translateY(-240px);
		-moz-transform:    translate3d(-50%, 0, 0) translateY(-240px);
		-ms-transform:     translate3d(-50%, 0, 0) translateY(-240px);
		transform:         translate3d(-50%, 0, 0) translateY(-240px);
	}

	.text-area {
		font-size: 30px;
		color: #4d4d4d;
		vertical-align: middle;
	}

	.button-wrapper {
		float: right;

		.moon-button {
			margin-right: 0px;
		}
	}

	.less-buttons {
		&.container {
			display: table-row;
		}

		.text-area {
			display: table-cell;
			padding-right: 9px;
		}

		.button-wrapper {
			float: inherit;
			display: table-cell;
			vertical-align: bottom;
		}
	}
}

